# pirobot

./: .gitignore  CLAUDE.md  README.md
docs/superpowers/plans/: 2026-03-28-camera-asyncio-refactor.md  2026-03-28-responsive-layout.md  2026-03-28-webrtc-video-streaming.md  2026-03-29-talk.md  2026-04-02-audio-quality-pulseaudio.md  2026-04-05-browser-audio-controls.md
docs/superpowers/specs/: 2026-03-27-responsive-layout-design.md  2026-03-28-camera-asyncio-refactor-design.md  2026-03-28-webrtc-video-streaming-design.md  2026-03-29-talk-design.md  2026-04-02-audio-quality-pulseaudio-design.md  2026-04-05-browser-audio-controls-design.md
pico/: main.py
react/pirobot/: package-lock.json
react/pirobot/src/: App.css  App.test.js  ArmControl.js  ArmControl.test.js  DirectionCross.js  ResponsiveJoystick.js  ResponsiveJoystick.test.js  VideoStreamControl.js  VideoStreamControl.test.js  home.js  home.test.js  settings.js  setupTests.js
server/: arm.py  camera.py  install.sh  light.py  pirobot.service  pyi_rth_sys_packages.py  pyproject.toml  server.py  ssl_cert.py  uart.py  webrtc.py
server/config/: default.robot.json  pirobot.robot.json
server/config/audio/: asound.conf  pulse-system.pa  pulseaudio.service
server/handlers/: __init__.py  arm.py  camera.py  lcd.py  light.py  talk.py
server/lcd/: LCD_2inch.py  lcdconfig.py
server/motor/: motor.py  motor_pico.py
server/servo/: servo_handler.py
server/tests/: test_camera.py  test_lcd_handler.py  test_webrtc.py
server/webserver/: app.py  session_manager.py
