[project]
name = "pirobot"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "aiohttp",
    "aiortc>=1.9.0,<1.10; platform_machine == 'aarch64'",
    "aiortc; platform_machine != 'aarch64'",
    "opencv-python-headless",
    "smbus; sys_platform == 'linux'",
    "pyserial",
    "pyttsx3",
    "pillow",
    "pygame",
    "sqlalchemy",
    "prettytable",
    "pyinstaller",
    "fake-rpi; platform_machine != 'aarch64'",
    "RPi.GPIO; platform_machine == 'aarch64'",
    "spidev; platform_machine == 'aarch64'",
    "numpy<2; platform_machine == 'aarch64'",
    "setuptools<65; platform_machine == 'aarch64'",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
